--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -46,17 +46,17 @@
       </div>
 
       <div class="about__grid">
-          <div class="about__card about__card--main reveal">
-              <div class="about__card-content">
-                  <span class="about__card-tag">Core Strategy</span>
-                  <h3>Платформа года для инноваторов</h3>
-                  <p>Мы создали пространство, где передовая цифровая инфраструктура становится доступной каждому. Оцените перспективы проекта с помощью наших авторских методологий.</p>
-                  <a href="#innovations" class="btn-link">Исследовать инструменты <i data-lucide="arrow-right"></i></a>
-              </div>
-              <div class="about__card-image">
-                  <img src="img/placeholder.png" alt="Innovation">
-              </div>
+        <div class="about__card about__card--main reveal">
+          <div class="about__card-content">
+              <span class="about__card-tag">Core Strategy</span>
+              <h3>Платформа года для инноваторов</h3>
+              <p>Мы создали пространство, где передовая цифровая инфраструктура становится доступной каждому.</p>
+              <a href="#innovations" class="btn-link">Исследовать инструменты <i data-lucide="arrow-right"></i></a>
           </div>
+          <div class="about__card-image">
+              <img src="img/four.jpg" alt="Innovation">
+          </div>
+      </div>
 
           <div class="about__card reveal">
               <div class="about__icon-box">
