--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,23 +1,23 @@
 <header class="header" id="header">
   <div class="container header__container">
-      <a href="/" class="logo">
+      <a href="./#home" class="logo">
           <span class="logo__dot"></span>
           <span class="logo__text">Jentra Zune</span>
       </a>
 
       <nav class="nav" id="nav">
           <ul class="nav__list">
-              <li><a href="#home" class="nav__link">Главная</a></li>
-              <li><a href="#about" class="nav__link">О платформе</a></li>
-              <li><a href="#benefits" class="nav__link">Преимущества</a></li>
-              <li><a href="#innovations" class="nav__link">Инновации</a></li>
-              <li><a href="#education" class="nav__link">Обучение</a></li>
-              <li><a href="#blog" class="nav__link">Блог</a></li>
+              <li><a href="./#home" class="nav__link">Главная</a></li>
+              <li><a href="./#about" class="nav__link">О платформе</a></li>
+              <li><a href="./#benefits" class="nav__link">Преимущества</a></li>
+              <li><a href="./#innovations" class="nav__link">Инновации</a></li>
+              <li><a href="./#education" class="nav__link">Обучение</a></li>
+              <li><a href="./#blog" class="nav__link">Блог</a></li>
           </ul>
       </nav>
 
       <div class="header__actions">
-          <a href="#contact" class="btn btn--primary">Начать</a>
+          <a href="./#contact" class="btn btn--primary">Начать</a>
           <button class="burger" id="burger" aria-label="Menu">
               <span></span>
           </button>
