--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
   <div class="container footer__container">
       <div class="footer__brand">
-          <a href="/" class="logo">
+          <a href="./#home" class="logo">
               <span class="logo__dot"></span>
               <span class="logo__text">Jentra Zune</span>
           </a>
@@ -11,22 +11,22 @@
       <div class="footer__nav">
           <h4 class="footer__title">Навигация</h4>
           <ul class="footer__list">
-              <li><a href="#about">О платформе</a></li>
-              <li><a href="#benefits">Преимущества</a></li>
-              <li><a href="#innovations">Инновации</a></li>
-              <li><a href="#blog">Наш блог</a></li>
+              <li><a href="./#about">О платформе</a></li>
+              <li><a href="./#benefits">Преимущества</a></li>
+              <li><a href="./#innovations">Инновации</a></li>
+              <li><a href="./#blog">Наш блог</a></li>
           </ul>
       </div>
 
       <div class="footer__legal">
           <h4 class="footer__title">Документы</h4>
           <ul class="footer__list">
-              <li><a href="privacy.html">Privacy Policy</a></li>
-              <li><a href="cookies.html">Cookie Policy</a></li>
-              <li><a href="terms.html">Terms of Service</a></li>
-              <li><a href="return.html">Return Policy</a></li>
-              <li><a href="disclaimer.html">Disclaimer</a></li>
-              <li><a href="personal-data-policy.html">Personal Data</a></li>
+              <li><a href="./privacy.html">Privacy Policy</a></li>
+              <li><a href="./cookies.html">Cookie Policy</a></li>
+              <li><a href="./terms.html">Terms of Service</a></li>
+              <li><a href="./return.html">Return Policy</a></li>
+              <li><a href="./disclaimer.html">Disclaimer</a></li>
+              <li><a href="./personal-data-policy.html">Personal Data</a></li>
           </ul>
       </div>
 
